# laybacker

./: .gitignore  README.md  SECURITY.md  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: build-ffmpeg.yml  build.yml  codeql.yml  quality.yml  scorecard.yml
docs/: CNAME  index.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.svelte  app.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/binaries/: FFMPEG_LICENSE.txt
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: commands.rs  lib.rs  models.rs
frontend/src-tauri/src/services/: ffmpeg.rs  inspector.rs  loudness.rs  matcher.rs  mod.rs  namer.rs  processor.rs
frontend/src-tauri/tests/: integration_test.rs
frontend/src/lib/components/: DropZone.svelte  ErrorBar.svelte  Header.svelte  MatchedPairRow.svelte  MatchedPairsList.svelte  MediaPreview.svelte  ProResButton.svelte  ProcessButton.svelte  SettingsPanel.svelte  UpdateBanner.svelte
frontend/src/lib/stores/: app.svelte.js
release-notes/: README.md  v0.1.22.md  v0.1.23.md  v0.1.24.md  v0.1.25.md  v0.1.26.md  v0.1.27.md  v0.1.28.md  v0.1.29.md  v0.1.30.md  v0.1.31.md  v0.1.32.md
scripts/: download-ffmpeg.sh
